# SQUID_MCU

./: .gitignore  ABOUT.md  CLAUDE.md  README.md  makefile  pyproject.toml
docs/: ARCHITECTURE.md  COMMAND.md  DRIVER_PROTOCOL.md  FILETREE.md  MOTOR_DRIVER.md  MotorManagerServicer_device_interface.md  motor_logic.md
scripts/: cli.py  squid.py  test_multi.py
scripts/squid/: __init__.py  client.py  errors.py  motor.py  packet.py  protocol.py  transport.py
src/: constants.cpp  constants.hpp  gpio.cpp  gpio.hpp  key_controller.cpp  key_controller.hpp  main.cpp  motor_controller.cpp  motor_controller.hpp  motor_driver.cpp  motor_driver.hpp  motor_settings.cpp  motor_settings.hpp  motor_simulator.cpp  motor_simulator.hpp  protocol.cpp  protocol.hpp  serial.cpp  serial.hpp  subdir.mk  uart_dma.cpp  uart_dma.hpp  usart2_driver.cpp  usart2_driver.hpp
system/include/arm/: semihosting.h
system/include/cmsis/: arm_common_tables.h  arm_math.h  cmsis_armcc.h  cmsis_armcc_V6.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_cmFunc.h  core_cmSimd.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h  stm32f407xx.h  stm32f4xx.h  system_stm32f4xx.h
system/include/cortexm/: exception-handlers.h
system/include/stm32f4-hal/: stm32_assert.h  stm32_assert_template.h  stm32f4xx_hal.h  stm32f4xx_hal_adc.h  stm32f4xx_hal_adc_ex.h  (+94 more)
tests/: conftest.py  test_integration.py  test_motor.py  test_packet.py
(+106 files in other folders)
